[workspace]
resolver = "2"

members = [
  "liquid-staking",
  "liquid-staking/meta",
  "liquid-staking/interactor",
  "vote-sc",
  "vote-sc/meta",
  "vote-sc/interactor",
  "delegation/interactor",
  "governance/interactor",
  "payable-features",
  "payable-features/meta",
  "payable-features/interactor",
]
