[package]
name = "delegation-mock"
version = "0.0.0"
authors = [ "Sorin Petreasca <sorin.petreasca@elrond.com>",]
edition = "2018"
publish = false

[lib]
path = "src/delegation.rs"

[dependencies.elrond-wasm]
version = "0.38.0"

[dev-dependencies.elrond-wasm-debug]
version = "0.38.0"

[dependencies.itertools]
version = "0.10.1"
default-features = false
