[package]
name = "liquid-staking"
version = "0.0.0"
authors = ["Sorin Petreasca <sorin.petreasca@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
version = "0.54.4"

[dependencies.multiversx-sc-modules]
version = "0.54.4"

[dependencies.delegation-mock]
path = "../delegation-mock"

[dev-dependencies.multiversx-sc-scenario]
version = "0.54.4"
