[package]
name = "liquid-staking"
version = "0.0.0"
authors = ["Sorin Petreasca <sorin.petreasca@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs.git"
rev = "2cf3e0b"

[dependencies.multiversx-sc-modules]
git = "https://github.com/multiversx/mx-sdk-rs.git"
rev = "2cf3e0b"


[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/multiversx/mx-sdk-rs.git"
rev = "2cf3e0b"
