[package]
name = "delegation-mock-meta"
version = "0.0.0"
edition = "2018"
publish = false
authors = [ "Sorin Petreasca <sorin.petreasca@elrond.com>",]

[dev-dependencies]

[dependencies.delegation-mock]
path = ".."

[dependencies.elrond-wasm]
version = "0.38.0"

[dependencies.elrond-wasm-debug]
version = "0.38.0"
