[package]
name = "delegation-mock-wasm"
version = "0.0.0"
authors = ["Sorin Petreasca <sorin.petreasca@multiversx.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[workspace]
members = ["."]

[dev-dependencies]
[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
[dependencies.delegation-mock]
path = ".."

[dependencies.multiversx-sc-wasm-adapter]
version = "0.41.3"
