[[bin]]
name = "delegation-sc-interact"
path = "src/delegation_sc_main.rs"

[lib]
path = "src/delegation_sc_interact.rs"

[package]
name = "delegation-sc-interact"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
toml = "0.8"
tokio = { version = "1.24" }

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.multiversx-sc-snippets]
git = "https://github.com/multiversx/mx-sdk-rs.git"
rev = "2cf3e0b8fe53654e63924bc524a5db518f7cb469"

[features]
chain-simulator-tests = []
