[package]
name = "liquid-staking-interactor"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "liquid-staking-interactor"
path = "src/liquid_staking_interactor_main.rs"

[lib]
path = "src/liquid_staking_interactor.rs"

[dependencies]
toml = "0.8.6"

[dependencies.liquid-staking]
path = ".."

[dependencies.delegation-sc-interact]
path = "../../delegation/interactor"

[dependencies.multiversx-sc-snippets]
version = "0.59.0"

[dependencies.multiversx-sc]
version = "0.59.0"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
chain-simulator-tests = []
