[package]
name = "liquid-staking-interactor"
version = "0.0.0"
edition = "2021"
publish = false

[[bin]]
name = "liquid-staking-interactor"
path = "src/liquid_staking_interactor_main.rs"

[lib]
path = "src/liquid_staking_interactor.rs"

[dependencies]
toml = "0.8.6"

[dependencies.liquid-staking]
path = ".."

[dependencies.delegation-sc-interact]
path = "../../delegation/interactor"

[dependencies.multiversx-sc-snippets]
git = "https://github.com/multiversx/mx-sdk-rs.git"
rev = "2cf3e0b8fe53654e63924bc524a5db518f7cb469"

[dependencies.multiversx-sc]
git = "https://github.com/multiversx/mx-sdk-rs.git"
rev = "2cf3e0b8fe53654e63924bc524a5db518f7cb469"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[features]
chain-simulator-tests = []
