[package]
name = "liquid-staking-meta"
version = "0.0.0"
authors = ["Sorin Petreasca <sorin.petreasca@multiversx.com>"]
edition = "2021"
publish = false

[dependencies.liquid-staking]
path = ".."

[dependencies.multiversx-sc-meta-lib]
git = "https://github.com/multiversx/mx-sdk-rs.git"
rev = "2cf3e0b"
