[package]
name = "liquid-staking-wasm"
version = "0.0.0"
authors = [ "Sorin Petreasca <sorin.petreasca@multiversx.com>",]
edition = "2021"
publish = false

[lib]
crate-type = [ "cdylib",]

[workspace]
members = [ ".",]

[dev-dependencies]

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"

[dependencies.liquid-staking]
path = ".."

[dependencies.elrond-wasm-node]
version = "0.38.0"

[dependencies.elrond-wasm-output]
version = "0.38.0"
features = ["wasm-output-mode"]
