[[bin]]
name = "vote-interact"
path = "src/vote_interactor_main.rs"

[lib]
path = "src/vote_interact.rs"

[package]
name = "rust-interact"
version = "0.0.0"
publish = false
edition = "2021"


[dependencies.vote-sc]
path = ".."

[dependencies]
toml = "0.8"

[dependencies.tokio]
version = "1.24"

[dependencies.clap]
version = "4.4.7"
features = ["derive"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.multiversx-sc]
version = "0.59.1"

[dependencies.multiversx-sc-snippets]
version = "0.59.1"

[features]
chain-simulator-tests = []
