[package]
name = "vote-sc-meta"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["MultiversX <contact@multiversx.com>"]

[dependencies.vote-sc]
path = ".."

[dependencies.multiversx-sc-meta-lib]
git = "https://github.com/multiversx/mx-sdk-rs.git"
rev = "2cf3e0b8fe53654e63924bc524a5db518f7cb469"
